fixed pom.xml files

--- a/t5-tree/pom.xml
+++ b/t5-tree/pom.xml
@@ -74,7 +74,17 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
+	
 </project>
 
 
