--- a/t5-tree-demo/pom.xml
+++ b/t5-tree-demo/pom.xml
@@ -9,7 +9,7 @@
 		<project.reporting.outputEncoding>iso-8859-1</project.reporting.outputEncoding>
 	</properties>
 
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>t5tree-demo</name>
 	<dependencies>
@@ -36,6 +36,15 @@
 				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+		</plugins>
 	</build>
 </project>
 
