--- a/t5-tree-demo/pom.xml
+++ b/t5-tree-demo/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.ahjava</groupId>
+	<groupId>de.arnohaase</groupId>
 	<artifactId>t5tree-demo</artifactId>
 	<properties>
 		<project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
@@ -14,7 +14,7 @@
 	<name>t5tree-demo</name>
 	<dependencies>
 		<dependency>
-			<groupId>de.ahjava</groupId>
+			<groupId>de.arnohaase</groupId>
 			<artifactId>t5tree</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
