--- a/t5-tree/pom.xml
+++ b/t5-tree/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>de.ahjava</groupId>
+	<groupId>de.arnohaase</groupId>
 	<artifactId>t5tree</artifactId>
 	<properties>
 		<project.build.sourceEncoding>iso-8859-1</project.build.sourceEncoding>
@@ -88,7 +88,7 @@
 				<configuration>
 					<archive>
 						<manifestEntries>
-							<Tapestry-Module-Classes>de.ahjava.t5tree.services.T5TreeModule</Tapestry-Module-Classes>
+							<Tapestry-Module-Classes>de.arnohaase.t5tree.services.T5TreeModule</Tapestry-Module-Classes>
 						</manifestEntries>
 					</archive>
 				</configuration>
